Mart complaint view issue resolve

--- a/app/src/main/res/layout/fragment_customer_complaint_list.xml
+++ b/app/src/main/res/layout/fragment_customer_complaint_list.xml
@@ -24,9 +24,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/complaints_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginBottom="2dp" />
+        android:layout_height="600dp"
+        android:paddingBottom="10dp" />
 
 </LinearLayout>
