--- a/app/src/main/res/layout/fragment_customer_home.xml
+++ b/app/src/main/res/layout/fragment_customer_home.xml
@@ -32,15 +32,10 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/mart_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_below="@+id/tool_bar"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginBottom="2dp" />
+            android:layout_width="match_parent"
+            android:layout_height="600dp"
+            android:paddingBottom="10dp" />
 
 
 
