--- a/app/src/main/res/layout/activity_admin_reviews_fragment.xml
+++ b/app/src/main/res/layout/activity_admin_reviews_fragment.xml
@@ -43,7 +43,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reviews_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="600dp"
+        android:paddingBottom="10dp" />
 
 
 </LinearLayout>
