--- a/app/src/main/res/layout/fragment_mart_review_list.xml
+++ b/app/src/main/res/layout/fragment_mart_review_list.xml
@@ -42,7 +42,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reviews_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="600dp"
+        android:paddingBottom="10dp"/>
 
 
 </LinearLayout>
