--- a/app/src/main/res/layout/recycler_complain_layout.xml
+++ b/app/src/main/res/layout/recycler_complain_layout.xml
@@ -1,89 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/orderlinear">
+    android:orientation="vertical"
+    android:tag="cards main container">
 
     <androidx.cardview.widget.CardView
-        style="@style/orderCard"
-        android:orientation="vertical"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="2dp"
-        app:cardUseCompatPadding="true">
-
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="6dp"
+        app:cardElevation="6dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="8dp"
             android:orientation="vertical">
-
-            <LinearLayout style="@style/orderlinear">
-
-                <TextView
-                    style="@style/orderlayout"
-                    android:text="@string/date"
-                    android:textColor="@color/black"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/complain_time"
-                    style="@style/orderlayout"
-                    android:text="17/02/2020"
-                    android:textColor="@color/black" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/orderlinear">
-
-                <TextView
-                    style="@style/orderlayout"
-                    android:text="@string/mart_name"
-                    android:textColor="@color/black"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/complaints_mart_name"
-                    style="@style/orderlayout"
-                    android:text="abc"
-                    android:textColor="@color/black" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/orderlinear">
-
-                <TextView
-                    style="@style/orderlayout"
-                    android:text="@string/customer_name"
-                    android:textColor="@color/black"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/complaints_customer_name"
-                    style="@style/orderlayout"
-                    android:text="abc"
-                    android:textColor="@color/black" />
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/orderlinear"
-                android:orientation="vertical">
-
-                <TextView
-                    style="@style/orderlayout"
-                    android:text="@string/complaints"
-                    android:textColor="@color/black"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/complain_detail"
-                    style="@style/orderlayout"
-                    android:text="Complaints"
-                    android:textColor="@color/black" />
-
-            </LinearLayout>
-
+            <TextView
+                android:id="@+id/complain_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                android:text="Date Time: "
+                android:textColor="@color/black" />
+            <TextView
+                android:id="@+id/complaints_mart_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Mart Name: "
+                android:padding="1dp"
+                android:textColor="@color/black" />
+            <TextView
+                android:id="@+id/complaints_customer_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                android:text="Customer Name: "
+                android:textColor="@color/black" />
+            <TextView
+                android:id="@+id/complain_detail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                android:text="Complaint: "
+                android:textColor="@color/black" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
-    <View style="@style/orderview" />
 
 </LinearLayout>
