--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -33,5 +33,12 @@
         android:layout_marginBottom="2dp" />
 
 
-
+    <ImageView
+        android:id="@+id/empty_cart_img"
+        android:layout_width="match_parent"
+        android:layout_height="283dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/noproduct"
+        android:scaleType="fitCenter"
+        android:visibility="gone"/>
 </RelativeLayout>
