--- a/app/src/main/res/layout/recycler_orders.xml
+++ b/app/src/main/res/layout/recycler_orders.xml
@@ -1,110 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:tag="cards main container">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/white"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true"
-        app:elevation="25dp">
-
+        android:layout_margin="8dp"
+        app:cardCornerRadius="6dp"
+        app:cardElevation="6dp">
         <LinearLayout
+            android:id="@+id/l1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="5">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
+            android:padding="8dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/admin_order_date"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5sp"
-                android:layout_weight="2"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/admin_order_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="2017-02-Dec"
-                    android:textColor="@color/overlay_dark_70"
-                    android:textSize="15sp" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Order:"
-                        android:textColor="@color/overlay_dark_70"
-                        android:textSize="17sp" />
-
-                    <TextView
-                        android:id="@+id/admin_order_number"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=" #3480"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="17sp" />
-
-                </LinearLayout>
-
-
-                <TextView
-                    android:id="@+id/admin_order_email"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="evanshajeed@gmail.com"
-                    android:textColor="@color/overlay_dark_70" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5sp"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Total"
-                    android:textColor="@color/overlay_dark_70"
-                    android:textSize="17sp" />
-
-                <TextView
-                    android:id="@+id/admin_order_total"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Rs: 154.00"
-                    android:layout_gravity="center"
-                    android:textColor="@color/overlay_dark_70"
-                    android:textSize="17sp" />
-
-            </LinearLayout>
+                android:padding="1dp"
+                android:text="Date Time: "
+                android:textColor="@color/black" />
 
             <TextView
-
-                android:id="@+id/admin_order_status"
-                android:layout_width="wrap_content"
-                android:layout_gravity="center"
+                android:id="@+id/admin_order_number"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="3sp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:lines="1"
-                android:text="processing"
-                android:textColor="@color/grey_700" />
+                android:padding="1dp"
+                android:text="Order No: "
+                android:textColor="@color/black" />
 
+            <TextView
+                android:id="@+id/admin_order_total"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                android:text="Total Amount: "
+                android:textColor="@color/black" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:background="@color/colorPrimaryDark"
+                android:text="Show Details"
+                android:textColor="@color/white" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
 
 </LinearLayout>
