--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -41,6 +41,7 @@
 
 
         <LinearLayout
+            android:layout_below="@id/cart_rv"
             android:id="@+id/linearcoupon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
